RESOLVED FIXED27865
selectionHasStyle needs clean up to fix Bug 27858
https://bugs.webkit.org/show_bug.cgi?id=27865
Summary selectionHasStyle needs clean up to fix Bug 27858
Ryosuke Niwa
Reported 2009-07-30 18:54:43 PDT
ditto.
Attachments
cleans up selectionHasStyle and selectionStartHasStyle (61.66 KB, patch)
2009-07-30 19:03 PDT, Ryosuke Niwa
no flags
deleted irrelevant tests. (6.79 KB, patch)
2009-07-30 19:04 PDT, Ryosuke Niwa
no flags
fixed typo (6.76 KB, patch)
2009-07-30 19:10 PDT, Ryosuke Niwa
no flags
Added the reason this patch does not need tests (8.10 KB, patch)
2009-07-31 18:35 PDT, Ryosuke Niwa
eric: review+
Ryosuke Niwa
Comment 1 2009-07-30 19:03:25 PDT
Created attachment 33853 [details] cleans up selectionHasStyle and selectionStartHasStyle
Ryosuke Niwa
Comment 2 2009-07-30 19:04:52 PDT
Created attachment 33854 [details] deleted irrelevant tests.
Ryosuke Niwa
Comment 3 2009-07-30 19:10:14 PDT
Created attachment 33855 [details] fixed typo
Eric Seidel (no email)
Comment 4 2009-07-31 14:16:44 PDT
Comment on attachment 33855 [details] fixed typo + The change is not testable. Why? Because there are no functional changes? You should say that.
Ryosuke Niwa
Comment 5 2009-07-31 18:35:50 PDT
Created attachment 33917 [details] Added the reason this patch does not need tests
Eric Seidel (no email)
Comment 6 2009-08-03 17:39:15 PDT
Comment on attachment 33917 [details] Added the reason this patch does not need tests OK.
Ryosuke Niwa
Comment 7 2009-08-04 00:33:46 PDT
Note You need to log in before you can comment on or make changes to this bug.